# ESP32_Programs

basic_lora/: CMakeLists.txt  sdkconfig  sdkconfig.old
brain_with_datalogging_c6/: sdkconfig  sdkconfig.old
brain_with_datalogging_c6/main/: idf_component.yml  master.c  modbus.c  sd_card_com.c
functional_brain_c6/: sdkconfig  sdkconfig.old
functional_brain_c6/components/espressif__esp-modbus/espressif__esp-modbus/freemodbus/serial_master/modbus_controller/: mbc_serial_master.c
functional_brain_c6/main/: master.c  modbus.c  modbus.h  queue.c  sd_card_com.h
functional_brain_s3/: sdkconfig  sdkconfig.old
functional_brain_s3/main/: CMakeLists.txt  data_point.c  data_point.h  fifo.h  master.c  modbus.c
generic_gpio/main/: gpio_example_main.c
gpio_single_output/: sdkconfig  sdkconfig.old
gpio_single_output/main/: gpio_example_main.c
mb_master/: sdkconfig  sdkconfig.old
mb_master/main/: CMakeLists.txt  master.c
mb_master_gpio/: sdkconfig  sdkconfig.old
mb_master_gpio/main/: master.c  modbus.c  modbus.h
sdmmc/: sdkconfig  sdkconfig.old
tusb_composite_msc_serialdevice_ToSDCard/: sdkconfig.old
tusb_composite_msc_serialdevice_ToSDCard/main/: tusb_composite_main.c
tusb_msc/: sdkconfig
tx_lora/: CMakeLists.txt  sdkconfig
tx_lora/main/: CMakeLists.txt  tx_lora.c
